<resources>

    <!--.......................OPSTE.....................-->
    <!--Naziv-->
    <string name="strNazivAplikacije">DIPNiš</string>

    <!--Stavke u meniju-->
    <string name="strTitlePrijava">Prijava</string>
    <string name="strTitleRegistracija">Registracija</string>
    <string name="strTitleOAplikaciji">O aplikaciji</string>

    <!--Dogadjaji, inicijative, problemi - Nazivi formi-->
    <string name="strTitlePocetna">Početna</string>
    <string name="strTitlePregledDogadjaja">Pregled događaja</string>
    <string name="strTitleOpisDogadjaja">Opis događaja</string>
    <string name="strTitleDodajDogadjaj">Dodaj događaj</string>
    <string name="strTitlePregledInicijativa">Pregled inicijativa</string>
    <string name="strTitleOpisInicijative">Opis inicijative</string>
    <string name="strTitleDodajInicijativu">Dodaj inicijativu</string>
    <string name="strTitlePregledProblema">Pregled problema</string>
    <string name="strTitleOpisProblema">Opis problema</string>
    <string name="strTitleDodajProblem">Dodaj problem</string>

    <!--Mapa-->
    <string name="strTitleMapa">Mapa</string>
    <string name="strMapaPostaviLokaciju">Postavi lokaciju</string>

    <!--Tekst u formi O aplikaciji-->
    <string name="strTvTekstOAplikaciji">Ovde ce da stoji tekst za formu O aplikaciji!!!</string>
    <!--.......................OPSTE.....................-->


    <!--.................ALERT DIALOG BUILDER...............-->
    <!--Sve forme-->
    <string name="strAdbTitleObavestenje">Obaveštenje</string>
    <string name="strAdbTitleSlika">Dodaj sliku</string>
    <string name="strAdbSlikaDodata">Slika je uspešno dodata u bazu.</string>
    <string name="strAdbObavezanUnos">Obavezan unos u polje:</string>
    <string-array name="strAdbItems">
        <item>Slikaj</item>
        <item>Odaberi iz galerije</item>
    </string-array>
    <string name="strAdbOK">OK</string>
    <string name="strAdbGreska">Greška prilikom konektovanja na server. Pokušajte kasnije.</string>

    <!--Mapa-->
    <string name="strMAdbTitleNazivLokacije">Odaberite naziv lokacije</string>
    <string name="strMAdbDa">Da</string>
    <string name="strMAdbNe">Ne</string>
    <string name="strMAdbPristupLokaciji">Dozvolite aplikaciji DIPNiš da pristupi lokaciji vašeg uređaja?</string>
    <string name="strMAdbNepostojecaLokacija">Ne možemo pronaći definisanu lokaciju na mapi.</string>

    <!--Dogadjaji-->
    <string name="strEAdbDodajSlikuObavestenje">Ne možete dodati sliku za događaj u budućnosti.</string>
    <string name="strEAdbDogadjajSacuvanObavestenje">Ne možete dodati događaj u budućnosti sa slikom.</string>
    <string name="strEAdbDogadjajSacuvan">Događaj je uspešno sačuvan u bazi.</string>

    <!--Inicijative-->
    <string name="strIAdbDodajSlikuObavestenje">Ne možete dodati sliku za inicijativu u budućnosti.</string>
    <string name="strIAdbInicijativaSacuvanaObavestenje">Ne možete dodati inicijativu u budućnosti sa slikom.</string>
    <string name="strIAdbInicijativaSacuvana">Inicijativa je uspešno sačuvana u bazi.</string>
    <!--.................ALERT DIALOG BUILDER...............-->


    <!--.....................OSNOVNA FORMA...................-->
    <!--Dugmici u pocetnoj formi-->
    <string name="strBtnDogadjaji">Događaji</string>
    <string name="strBtnInicijative">Inicijative</string>
    <string name="strBtnProblemi">Problemi</string>
    <string name="strBtnPregledDogInicProb">Pregled</string>
    <string name="strBtnDodajDogInicProb">Dodaj</string>
    <!--.....................OSNOVNA FORMA...................-->


    <!--.......................DOGADJAJI.....................-->
    <!--Zajednicko-->
    <string name="strEREDEATvTipDogadjaja">Tip događaja:</string>
    <string name="strEREDTvVrstaSporta">Vrsta sporta:</string>
    <string name="strEREDTvIzvodjacGrupa">Izvođač/Grupa:</string>
    <string name="strEREDTvVrstaDogadjaja">Vrsta događaja:</string>
    <string name="strEDEABtnDodajSliku">Dodaj sliku</string>

    <!--Iz forme Pregled dogadjaja-->
    <string name="strERTvFilter">Filter</string>
    <string-array name="strERSpinTipDogadjaja">
        <item>Svi</item>
        <item>Sportski</item>
        <item>Koncerti</item>
        <item>Ostali</item>
    </string-array>
    <string name="strERChkBuduciDogadjaji">Prikaži samo buduće događaje</string>
    <string name="strERTvPrikaz">Prikaz odabranih događаја</string>
    <string name="strERTvPrikazNePostoji">Ne postoji nijedan događaj ove vrste.</string>

    <!--Iz forme Opis dogadjaja-->
    <string name="strEDTvRezultat">Rezultat:</string>
    <string name="strEDTvKratakOpis">Kratak opis:</string>
    <string name="strEDTvLokacija">Lokacija:</string>
    <string name="strEDTvDatum">Datum:</string>
    <string name="strEDTvVreme">Vreme:</string>
    <string name="strEDTvOpis">Opis:</string>
    <string name="strEDTvGalerija">Galerija:</string>
    <string name="strEDTvGalerijaOpis">Još uvek ne postoje slike za ovaj događaj.</string>
    <string name="strEDBtnSledeca">&gt;</string>
    <string name="strEDBtnPrethodna">&lt;</string>

    <!--Iz forme Dodaj dogadjaj-->
    <string-array name="strEASpinTipDogadjaja">
        <item>Sportski</item>
        <item>Koncerti</item>
        <item>Ostali</item>
    </string-array>
    <string name="strEAEtHintVrstaSporta">Vrsta sporta</string>
    <string name="strEAEtHintIzvodjacGrupa">Izvođač/Grupa</string>
    <string name="strEAEtHintVrstaDogadjaja">Vrsta događaja</string>
    <string name="strEATvRezultat">Rezultat</string>
    <string name="strEAEtHintTim1">Tim 1</string>
    <string name="strEAEtHintTim2">Tim 2</string>
    <string name="strEAEtHintKratakOpis">Kratak opis</string>
    <string name="strEAEtHintLokacija">Lokacija</string>
    <string name="strEAEtHintOpis">Opis</string>
    <string name="strEABtnSacuvajDogadjaj">Sačuvaj događaj</string>
    <!--.......................DOGADJAJI.....................-->


    <!--.....................INICIJATIVE......................-->
    <!--Zajednicko-->
    <string name="strIRIDIATvTipInicijative">Tip inicijative:</string>
    <string name="strIRIDTvVrstaSporta">Vrsta sporta:</string>
    <string name="strIRIDTvRazlogProtesta">Razlog protesta:</string>
    <string name="strIRIDTvVrstaHumanitarneAkcije">Vrsta humanitarne akcije:</string>
    <string name="strIRIDTvVrstaInicijative">Vrsta inicijative:</string>
    <string name="strIDIABtnDodajSliku">Dodaj sliku</string>

    <!--Iz forme Pregled inicijativa-->
    <string name="strIRTvFilter">Filter</string>
    <string-array name="strIRSpinTipInicijative">
        <item>Sve</item>
        <item>Sportske</item>
        <item>Protesti</item>
        <item>Humanitarne akcije</item>
        <item>Ostale</item>
    </string-array>
    <string name="strIRChkBuduceInicijative">Prikaži samo buduće inicijative</string>
    <string name="strIRTvPrikaz">Prikaz odabranih inicijativa</string>
    <string name="strIRTvPrikazNePostoji">Ne postoji nijedna inicijativa ove vrste.</string>

    <!--Iz forme Opis inicijativa-->
    <string name="strIDTvKratakOpis">Kratak opis:</string>
    <string name="strIDTvLokacija">Lokacija:</string>
    <string name="strIDTvDatum">Datum:</string>
    <string name="strIDTvVreme">Vreme:</string>
    <string name="strIDTvOpis">Opis:</string>
    <string name="strIDTvGalerija">Galerija:</string>
    <string name="strIDTvGalerijaOpis">Još uvek ne postoje slike za ovu inicijativu.</string>
    <string name="strIDBtnSledeca">&gt;</string>
    <string name="strIDBtnPrethodna">&lt;</string>

    <!--Iz forme Dodaj inicijativu-->
    <string-array name="strIASpinTipInicijative">
        <item>Sportske</item>
        <item>Protesti</item>
        <item>Humanitarne akcije</item>
        <item>Ostale</item>
    </string-array>
    <string name="strIAEtHintVrstaSporta">Vrsta sporta</string>
    <string name="strIAEtHintRazlogProtesta">Razlog protesta</string>
    <string name="strIAEtHintVrstaHumanitarneAkcije">Vrsta humanitarne akcije</string>
    <string name="strIAEtHintVrstaInicijative">Vrsta inicijative</string>
    <string name="strIAEtHintKratakOpis">Kratak opis</string>
    <string name="strIAEtHintLokacija">Lokacija</string>
    <string name="strIAEtHintOpis">Opis</string>
    <string name="strIABtnSacuvajInicijativu">Sačuvaj inicijativu</string>
    <!--.....................INICIJATIVE......................-->


    <!--.......................PROBLEMI.....................-->
    <!--Zajednicko-->
    <string name="strPRPDPATvTipProblema">Tip problema:</string>
    <string name="strPDPABtnDodajSliku">Dodaj sliku</string>

    <!--Iz forme Pregled problema-->
    <string name="strPRTvFilter">Filter</string>
    <string-array name="strPRSpinTipProblema">
        <item>Svi</item>
        <item>Rupe na kolovozu</item>
        <item>Izgubljeni ljubimci</item>
        <item>Lutalice</item>
        <item>Ostali</item>
    </string-array>
    <string name="strPRTvPrikaz">Prikaz odabranih problema</string>
    <string name="strPRTvPrikazNePostoji">Ne postoji nijedan problem ove vrste.</string>
    <string name="strPREtHintUlica">Naziv ulice (deo naziva)</string>

    <!--Iz forme Opis problema-->


    <!--Iz forme Dodaj problem-->

    <!--.......................PROBLEMI.....................-->
</resources>
