<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.dika.dipnis.EventReviewActivity"
    tools:showIn="@layout/activity_event_review"
    android:background="@drawable/transparent_background_image" >

    <RelativeLayout
        android:id="@+id/rlEventReview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/mar15"
        android:layout_marginLeft="@dimen/mar15"
        android:layout_marginRight="@dimen/mar15"
        android:layout_marginStart="@dimen/mar15"
        android:layout_marginTop="1dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <TextView
            android:id="@+id/ERTvFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strERTvFilter"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/t19"
            android:layout_marginTop="@dimen/mar10" />

        <RelativeLayout
            android:id="@+id/ERRlFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:layout_marginTop="@dimen/mar6"
            android:layout_below="@id/ERTvFilter">

            <LinearLayout
                android:id="@+id/ERLlTipDogadjaja"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mar5"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/pad3"
                android:paddingLeft="@dimen/pad3"
                android:paddingRight="@dimen/pad3">

                <TextView
                    android:id="@+id/ERTvTipDogadjaja"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strEREDEATvTipDogadjaja"
                    android:textColor="@color/black"
                    android:textSize="@dimen/t17" />

                <Spinner
                    android:id="@+id/ERSpinTipDogadjaja"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/mar10"
                    android:layout_marginStart="@dimen/mar10"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ERLlVrstaIzvodjac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ERLlTipDogadjaja"
                android:layout_marginTop="@dimen/mar10"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/pad3"
                android:paddingLeft="@dimen/pad3"
                android:paddingRight="@dimen/pad3"
                android:visibility="gone">

                <TextView
                    android:id="@+id/ERTvVrstaIzvodjac"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="@dimen/t17" />

                <Spinner
                    android:id="@+id/ERSpinVrstaIzvodjac"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/mar10"
                    android:layout_marginStart="@dimen/mar10"
                    android:layout_weight="1" />

            </LinearLayout>

            <CheckBox
                android:id="@+id/ERChkBuduciDogadjaji"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ERLlVrstaIzvodjac"
                android:layout_marginTop="@dimen/mar10"
                android:text="@string/strERChkBuduciDogadjaji"
                android:textColor="@color/black"
                android:textSize="@dimen/t17" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ERRlPrikaz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ERRlFilter"
            android:layout_marginTop="@dimen/mar15"
            android:paddingBottom="@dimen/pad3"
            android:paddingLeft="@dimen/pad3"
            android:paddingRight="@dimen/pad3">

            <TextView
                android:id="@+id/ERTvPrikaz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strERTvPrikaz"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/t19"
                android:layout_marginBottom="@dimen/mar8"/>

            <ListView
                android:id="@+id/ERLvPrikaz"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/ERTvPrikaz" />

            <TextView
                android:id="@+id/ERTvPrikazNePostoji"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strERTvPrikazNePostoji"
                android:textColor="@color/red"
                android:textSize="@dimen/t17"
                android:layout_below="@id/ERTvPrikaz"
                android:visibility="gone"/>

        </RelativeLayout>

    </RelativeLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/ERClProgressBar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/rlEventReview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/greyTransparent"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/ERProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
